--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,4 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
+
 
 .logo {
   height: 6em;
@@ -12,7 +7,7 @@
   transition: filter 300ms;
 }
 .logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+  filter: drop-shadow(0 0 2em #ffffff);
 }
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
@@ -39,4 +34,26 @@
 
 .read-the-docs {
   color: #888;
+}
+.boxed-container{
+  max-width: 1440px;
+  margin: 0 auto;
+  box-shadow: 0 24px 48px rgba(17,16,62,0.12);
+  min-height: 70%;
+  min-height: -webkit-calc(100% - 300px);
+  min-height: -moz-calc(100% - 300px);
+  min-height: calc(100% - 300px);          /*min-height hack*/
+}
+
+.profile_btn{
+  padding: 4px;
+  background: none;
+  color: #fff;
+}
+
+.nav_toggle{
+  background: rgb(218, 92, 115);
+  position: relative;
+  z-index: 999;
+  color: #fff;
 }
