feat: user and role management

--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,7 @@ a:hover {
 } */
 html, body {
   height: 100%;
+  color: #000;
 }
 
 h1 {
@@ -51,7 +52,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  /* background-color: #1a1a1a; */
   cursor: pointer;
   transition: border-color 0.25s;
 }
