--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,9 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
-
+.text-group{
+  color: #333 !important;
+}
 /* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
