--- a/src/components/Device/DeviceForm.css
+++ b/src/components/Device/DeviceForm.css
@@ -1,3 +1,5 @@
+/* DeviceForm.css */
+
 .device-form {
   max-width: 600px;
   margin: 0 auto;
@@ -13,37 +15,37 @@
   color: #333;
 }
 
-.form-table {
-  display: grid;
-  grid-template-columns: 150px 1fr; /* Two columns: fixed width for labels and flexible for inputs */
-  gap: 10px; /* Space between columns */
+.form-group {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
 }
 
-.form-row {
-  display: contents; /* Ensures that form-row does not introduce extra space */
-}
-
-.form-row label {
+.form-group label {
+  width: 150px; /* Adjust as needed */
   font-weight: bold;
-  align-self: center; /* Vertically centers the label */
+  margin-right: 10px;
+  text-align: left;
 }
 
-.form-row input {
-  width: 100%;
+.form-group input {
+  flex: 1;
   padding: 8px;
   font-size: 1em;
   border: 1px solid #ddd;
   border-radius: 4px;
+  text-align: left;
 }
 
 .sensor-group {
   display: flex;
   align-items: center;
-  gap: 10px; /* Space between sensor input and button */
+  margin-bottom: 10px;
 }
 
 .remove-sensor-button,
 .add-sensor-button {
+  margin-left: 10px;
   padding: 5px 10px;
   font-size: 0.9em;
   border: none;
@@ -69,9 +71,24 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  grid-column: span 2; /* Makes the submit button span both columns */
 }
 
 .submit-button:hover {
   background-color: #2ecc71;
+}
+
+.sensor-checkboxes {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.sensor-checkbox {
+  display: flex;
+  align-items: center;
+  margin-right: 15px;
+  margin-bottom: 10px;
+}
+
+.sensor-checkbox input {
+  margin-right: 8px;
 }
