--- a/src/components/Device/DeviceForm.css
+++ b/src/components/Device/DeviceForm.css
@@ -97,7 +97,8 @@
   border-collapse: collapse;
 }
 
-.sensor-table th, .sensor-table td {
+.sensor-table th,
+.sensor-table td {
   border: 1px solid #ddd;
   padding: 8px;
 }
